--- a/index.html
+++ b/index.html
@@ -401,6 +401,19 @@
             </div>
         </div>
 
+        <div class="video_horizontal_container">
+            <div class="video_item">
+                <img src="https://github.com/MPC2-ICLR/MPC2_videos/blob/main/bo_human.png?raw=true" alt="MPC2" style="width:100%">
+                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/blob/main/bo_human.png?raw=true">Figure W6.</a> Optimization over foward speed</div>
+            </div>
+            <div class="video_item" style="width: 60%;">
+                <video width="100%" controls>
+                    <source src="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/human_optimized.mp4" type="video/mp4">
+                </video>
+                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/human_optimized.mp4">Video W15.</a> Optimized gait of human (0.79m/s to 1.24m/s)</div>
+            </div>
+        </div>
+
 
         <h3 id="com">Center of mass polygon support</h3>
         <p>We demonstrate that MPC<sup>2</sup>maintains larger polygon support than DynSyn during walking, enhancing the stability.  </p>
@@ -409,13 +422,13 @@
                 <video width="100%" controls>
                     <source src="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/com.mp4" type="video/mp4">
                 </video>
-                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/com.mp4">Video W15.</a> CoM polygon support of MPC<sup>2</sup><br>area: 0.0761&plusmn;0.0260</div>
+                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/com.mp4">Video W16.</a> CoM polygon support of MPC<sup>2</sup><br>area: 0.0761&plusmn;0.0260</div>
             </div>
             <div class="video_item"style="width: 45%;">
                 <video width="100%" controls>
                     <source src="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/com_dynsyn.mp4" type="video/mp4">
                 </video>
-                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/com_dynsyn.mp4">Video W16.</a> CoM polygon support of DynSyn<br>area: 0.0582&plusmn;0.0151</div>
+                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/com_dynsyn.mp4">Video W17.</a> CoM polygon support of DynSyn<br>area: 0.0582&plusmn;0.0151</div>
             </div>
         </div>
 
@@ -426,7 +439,7 @@
 
         <div class="video_container">
             <img src="https://github.com/MPC2-ICLR/MPC2_videos/blob/main/energy.png?raw=true" alt="MPC2" style="width:100%">
-            <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/blob/main/energy.png?raw=true">Figure W6.</a> Energy consumption comparison</div>
+            <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/blob/main/energy.png?raw=true">Figure W7.</a> Energy consumption comparison</div>
         </div>
 
         <h3 id="mpc">Performances of MPC baselines</h3>
@@ -439,20 +452,20 @@
                 <video width="100%" controls>
                     <source src="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_gd.mp4" type="video/mp4">
                 </video>
-                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_gd.mp4">Video W17.</a> Gradient Descent</div>
+                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_gd.mp4">Video W18.</a> Gradient Descent</div>
             </div>
             <div class="video_item">
                 <video width="100%" controls>
                     <source src="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_ilqg.mp4" type="video/mp4">
                 </video>
-                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_ilqg.mp4">Video W18.</a> iLQG</div>
+                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_ilqg.mp4">Video W19.</a> iLQG</div>
             </div>
 
             <div class="video_item">
                 <video width="100%" controls>
                     <source src="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_ilqs.mp4" type="video/mp4">
                 </video>
-                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_ilqs.mp4">Video W19.</a> iLQS</div>
+                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_ilqs.mp4">Video W20.</a> iLQS</div>
             </div>
         </div>
 
@@ -465,20 +478,20 @@
                 <video width="100%" controls>
                     <source src="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_crossentropy.mp4" type="video/mp4">
                 </video>
-                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_crossentropy.mp4">Video W20.</a> Cross Entropy</div>
+                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_crossentropy.mp4">Video W21.</a> Cross Entropy</div>
             </div>
             <div class="video_item">
                 <video width="100%" controls>
                     <source src="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_robustsample.mp4" type="video/mp4">
                 </video>
-                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_robustsample.mp4">Video W21.</a> Robust Sampling</div>
+                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_robustsample.mp4">Video W22.</a> Robust Sampling</div>
             </div>
 
             <div class="video_item">
                 <video width="100%" controls>
                     <source src="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_samplegradient.mp4" type="video/mp4">
                 </video>
-                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_samplegradient.mp4">Video W22.</a> Sample Gradient</div>
+                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpc_samplegradient.mp4">Video W23.</a> Sample Gradient</div>
             </div>
         </div>
         
@@ -489,13 +502,13 @@
                 <video width="100%" controls>
                     <source src="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpo_stand.mp4" type="video/mp4">
                 </video>
-                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpo_stand.mp4">Video W23.</a> MPO standing.</div>
+                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpo_stand.mp4">Video W24.</a> MPO standing.</div>
             </div>
             <div class="video_item">
                 <video width="100%" controls>
                     <source src="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpo_walk.mp4" type="video/mp4">
                 </video>
-                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpo_walk.mp4">Video W24.</a> MPO walking</div>
+                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/mpo_walk.mp4">Video W25.</a> MPO walking</div>
             </div>
         </div>
 
@@ -504,13 +517,13 @@
                 <video width="100%" controls>
                     <source src="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/dep_stand.mp4" type="video/mp4">
                 </video>
-                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/dep_stand.mp4">Video W23.</a> DEP-RL standing.</div>
+                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/dep_stand.mp4">Video W26.</a> DEP-RL standing.</div>
             </div>
             <div class="video_item">
                 <video width="100%" controls>
                     <source src="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/dep_walk.mp4" type="video/mp4">
                 </video>
-                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/dep_walk.mp4">Video W24.</a> DEP-RL walking</div>
+                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/dep_walk.mp4">Video W27.</a> DEP-RL walking</div>
             </div>
         </div>
 
