--- a/index.html
+++ b/index.html
@@ -422,13 +422,13 @@
                 <video width="100%" controls>
                     <source src="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/com.mp4" type="video/mp4">
                 </video>
-                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/com.mp4">Video W16.</a> CoM polygon support of MPC<sup>2</sup><br>area: 0.0761&plusmn;0.0260</div>
+                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/com.mp4">Video W16.</a> CoM polygon support of MPC<sup>2</sup><br>area: 0.0761&plusmn;0.0260m<sup>2</sup></div>
             </div>
             <div class="video_item"style="width: 45%;">
                 <video width="100%" controls>
                     <source src="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/com_dynsyn.mp4" type="video/mp4">
                 </video>
-                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/com_dynsyn.mp4">Video W17.</a> CoM polygon support of DynSyn<br>area: 0.0582&plusmn;0.0151</div>
+                <div class="video_label"><a href="https://github.com/MPC2-ICLR/MPC2_videos/raw/refs/heads/main/com_dynsyn.mp4">Video W17.</a> CoM polygon support of DynSyn<br>area: 0.0582&plusmn;0.0151m<sup>2</sup></div>
             </div>
         </div>
 
@@ -496,7 +496,8 @@
         </div>
         
         <h3 id="drl">Performances of DRL baselines</h3>
-        Below we show the control performance of MPO and DEP-RL on the MS-Human-700 model (choosing best from 3 random seeds). We found them fail to either stand or walk with the high-dimensional model.
+        <p>Below we show the control performance of MPO and DEP-RL on the MS-Human-700 model (choosing best from 3 random seeds). We found them fail to either stand or walk with the high-dimensional model.
+            </p>
         <div class="video_horizontal_container">
             <div class="video_item">
                 <video width="100%" controls>
