--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
             </div>
         </div>
 
-        <h3 id="ostrich">Dexterous manipulation over the arm model</h3>
+        <h3 id="dexhand">Dexterous manipulation over the arm model</h3>
         <p>
         We demonstrate that MPC<sup>2</sup> is capable of controlling the arm musculoskeletal model (85 muscles) to maniputate cube to a sequence of target orientations.
         </p>
