--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
                 to achieve the target joint positions, with gain parameters dynamically adjusted according to the system morphology. 
             </li>
         </ul> -->
-        <p>Our 
-            implementation of MPC<sup>2</sup> is in the <a href="https://anonymous.4open.science/r/mpc2-6B42">anonymous link</a>.</p>
+<!--         <p>Our 
+            implementation of MPC<sup>2</sup> is in the <a href="https://anonymous.4open.science/r/mpc2-6B42">anonymous link</a>.</p> -->
         <p></p>
         <img src="https://github.com/MPC2-ICLR/MPC2_videos/blob/main/figure_algo.png?raw=true" alt="MPC2" style="width:100%">
         <div class="video_label">
