--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
     </section>
     <!-- End BibTeX citation -->
 
-  <footer class="footer">
+  <!-- <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-8">
@@ -746,7 +746,7 @@
       </div>
     </div>
   </div>
-</footer>
+</footer> -->
 
 <!-- Statcounter tracking code -->
   
