--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
     <div class="content has-text-justified">
       <p>In this paper, we aim to control high-dimensional musculoskeletal systems to achieve movement tasks.
         <br>We expect the control method to have the following properties:
-        <br>&nbsp;&nbsp;&nbsp;&nbsp;• <b>(near) real-time</b> control generation
-        <br>&nbsp;&nbsp;&nbsp;&nbsp;• <b>training-free</b> deployment over different task and environments
-        <br>&nbsp;&nbsp;&nbsp;&nbsp;• <b>robust</b> performance subject to sudden model changes
+        <br>• <b>(near) real-time</b> control generation
+        <br>• <b>training-free</b> deployment over different task and environments
+        <br>• <b>robust</b> performance subject to sudden model changes
       </p>
       <p>We use the model, <a href="https://lnsgroup.cc/research/MS-Human-700">MS-Human-700</a>, as the target high-dimensional musculoskeletal system. 
         <br> It is a comprehensive whole-body model consisting of 90 rigid body segments, 206 joints, and <b>700</b> muscle-tendon units.
